@@ -17,6 +17,7 @@ Bug fixes
  * If 2d dataset does not exist, don't crash when using colorbar
  * Ignore HDF5 data types which are not supported by h5py
  * Catch recursion limit errors properly
+ * In text sort plugin, clip length to minimum
 
 Changes in 1.21.1
  * Add swap option on keys, swapping symbol and text
